[package]
name = "axbind"
version = "0.4.0"
edition = "2021"

[dependencies]
gfunc = { path = "bundled_dependencies/gfunc/v0.1", features = [ 'fnav2' ] }
optwrite = { path = "bundled_dependencies/optwrite/v0.1" }
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["cargo"] }
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
aho-corasick = "1.1.3"
glob = "0.3.1"
serde = { version = "1.0.201", features = ["derive"] }
